# Reaction_Simulator

./: CMakeLists.txt  D_Rep2.cpp  Double_Replacement.cpp  Ionic_Smile.cpp  Organic Rules.txt  Periodic Table.csv  Periodic_Table2.csv  Reactivity _Series.csv  S_Rep.cpp  S_Rep2.cpp  Single_Replacement.cpp  Syntesis.cpp  Synthesis1.cpp  Synthesis1.h  main_function.txt  practice.cpp  testcpp.cpp
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h  Organic_Smi_out.txt  Organic_Smile.cpp  Organic_Smile.py  Pythontest.py  puthon.py  testcpp2.cpp
